--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"daisyui": "^2.42.1"
+		"daisyui": "^2.42.1",
+		"string-strip-html": "^13.0.2"
 	}
 }
