--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	"type": "module",
 	"dependencies": {
 		"daisyui": "^2.42.1",
+		"reading-time-estimator": "^1.7.2",
 		"string-strip-html": "^13.0.2"
 	}
 }
