--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"clipboard": "^2.0.11",
 		"daisyui": "^2.42.1",
 		"reading-time-estimator": "^1.7.2",
 		"string-strip-html": "^13.0.2",
